--- a/bookshop-webapp/package.json
+++ b/bookshop-webapp/package.json
@@ -18,6 +18,7 @@
     "react-select": "^5.3.1",
     "react-toastify": "^8.2.0",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
