view book details + edit + delete

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 /.idea/
 api/venv/
-api/__pycache__/
-api/domain/__pycache__/
-api/usecases/__pycache__/
-api/utils/__pycache__/
+**/__pycache__
 bookshop-webapp/node_modules/
 cypress/node_modules/
