--- a/cypress/package.json
+++ b/cypress/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "cypress": "^10.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0"
+  },
   "scripts": {
     "cypress:open": "cypress open",
     "test": "echo \"Error: no test specified\" && exit 1"
