--- a/cypress/package.json
+++ b/cypress/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "cypress:open": "cypress open",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init-db": "./scripts/init-db.sh"
   },
   "browserslist": [
     ">0.2%",
